# chordola

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
console/: .ninja_deps  .ninja_log  CMakeLists.txt  Dockerfile.cpp-env-ubuntu  VERSION.h  audiobackend.cpp  audiobackend.h  audiobackendexception.h  chord-recogniser-console  chord.cpp  chord.h  console  console.pro  main.cpp
console/.cmake/api/v1/reply/: cache-v2-47a5a96397d1ed36be60.json  cache-v2-d0674e6cc6ba79b7cc58.json  cmakeFiles-v1-7626b6701ca3e67e490b.json  cmakeFiles-v1-dec775a7baf2540727a5.json  codemodel-v2-3fdee1176640285f88c8.json  codemodel-v2-f7736ef6f1208ed9065b.json  index-2023-09-11T22-04-39-0296.json  index-2023-11-23T22-43-27-0691.json  target-chord-recogniser-console-Debug-cde86d9bc3be77ed9b7f.json
console/.devcontainer/: devcontainer.json
lib/jack-backend/: JackMidiGateway.cpp  JackMidiGateway.h  audiobackend.cpp  audiobackend.h  audiobackendexception.h  chord.cpp  chord.h  chord_listener.cpp  chord_listener.h
ui-qt/: CMakeLists.txt  main.cpp
